# Reelz_app

./: .gitignore  ADS_IMPLEMENTATION.md  README.md  build.gradle.kts  codemagic.yaml  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  header_forge.cpp  header_forge.h  m3u8_parser.cpp  m3u8_parser.h  reelz_jni.cpp  reelz_native.cpp  scanner.cpp  url_builder.cpp  url_builder.h  url_extractor.cpp  url_extractor.h
app/src/main/kotlin/com/axio/reelz/: ReelzApp.kt
app/src/main/kotlin/com/reelz/: MainActivity.kt  ReelzApp.kt
app/src/main/kotlin/com/reelz/ads/: AdEngine.kt  DetailBannerAd.kt  ImaPreRollView.kt  NativeAdCard.kt  ReelzBrowserSheet.kt  ShortsNativeAdPage.kt  VastTagProvider.kt
app/src/main/kotlin/com/reelz/brain/: TasteEngine.kt  TasteSyncWorker.kt  UserTasteProfile.kt
app/src/main/kotlin/com/reelz/data/: Api.kt
app/src/main/kotlin/com/reelz/di/: AdModule.kt  AppModule.kt  BrainModule.kt  UtilModule.kt
app/src/main/kotlin/com/reelz/remoteconfig/: ConfigCrypto.kt  ConfigSyncWorker.kt  PremiumGate.kt  RemoteConfigModel.kt  RemoteConfigRepository.kt
app/src/main/kotlin/com/reelz/scanner/: DirectScanner.kt  NativeBridge.kt  SourceStats.kt  StreamEngine.kt  StreamResultCache.kt  StreamSource.kt  WebViewScanner.kt
app/src/main/kotlin/com/reelz/service/: DownloadService.kt  (+1 more)
app/src/main/kotlin/com/streamapp/: MainActivity.kt  StreamApp.kt
app/src/main/res/drawable/: ic_company_logo.xml  ic_launcher_foreground.xml  ic_reelz_logo.xml  ic_splash.xml  ic_splash_logo.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  network_security_config.xml
gradle/: libs.versions.toml
(+129 files in other folders)
